Rework the prefix-time stuff. The option is now call repeat-time and defaults to 500 ms. However, it only applies to a small subset of commands, currently: up-pane, down-pane, next-window, previous-window, resize-pane-up, resize-pane-down. These are the commands for which it is obviously useful, having it for everything else was just bloody annoying.

--- a/TODO
+++ b/TODO
@@ -77,4 +77,4 @@ for 0.6:
 - document password/locking commands
 - document update set/setw in man page with -g and -u flags
 - document xterm-keys
-- remove/fix & document prefix-time (only apply to some commands?)
+- document repeat-time
