--- a/TODO
+++ b/TODO
@@ -70,8 +70,12 @@
 - make command sequences more usable: don't require space around ;, handle
   errors better
 - would be nice if tmux could be the shell (tmux attach, but hard link to tmux
-  binary as "tmuxsh" or wrapper script?) -- problems with tty dev permissions
+  binary as "tmuxsh" or wrapper script?) -- problems with tty dev permeissions
 - 88 colour support; new grid cell flag, and 256<->88 88<->16 translation tables
+- UTF-8 combining characters don't work. store in one cell - pointer to table
+  of chains. bit of a hack and would mean max of 65536 per screen. OR maybe
+  utf8 should work differently; could store as multiple cells, 1 of width >0
+  and n of width 0, then translate cursor indexes on-the-fly
 
 (hopefully) for 0.7, in no particular order:
 - swap-pane-up, swap-pane-down (maybe move-pane-*)
@@ -84,6 +88,4 @@
 - document command sequences
 - document find-window
 - document split-window -p and -l
-- UTF-8 combining characters don't work (probably should be width 1 but are
-  listed as 2)
 - attach should have a flag to create session if it doesn't exist
