* Better support for at least the most common variant of mouse input: parse it and adjust for different panes. Also support mouse in window/session choice mode. * Bring back the fancy window titles with session/window names: it is easy to work around problems with elinks (see FAQ).

--- a/FAQ
+++ b/FAQ
@@ -161,6 +161,6 @@ The following shell function does this, and also clears the window title on
 exit (elinks, for some strange reason, sets it to the value of TERM):
 
 	elinks() {
-        	STY= `which elinks` "$*"
+        	STY= `which elinks` $*
 	        echo -ne \\033]0\;\\007;
 	}
