Comment. Missing OS X headers. +TODO.

--- a/TODO
+++ b/TODO
@@ -88,3 +88,5 @@
   cannot control it per-session
 - if the child is suspended in window with eg ^Z it should be restarted, or
   ^Z should be ignored
+- look at osdep-openbsd/freebsd code again to try and make it more accurate
+  and more consistent
