--- a/TODO
+++ b/TODO
@@ -69,7 +69,7 @@
 - make command sequences more usable: don't require space around ;, handle
   errors better
 - would be nice if tmux could be the shell (tmux attach, but hard link to tmux
-  binary as "tmuxsh" or wrapper script?) -- problems with tty dev permeissions
+  binary as "tmuxsh" or wrapper script?) -- problems with tty dev permissions
 - UTF-8 combining characters don't work. store in one cell - pointer to table
   of chains. bit of a hack and would mean max of 65536 per screen. OR maybe
   utf8 should work differently; could store as multiple cells, 1 of width >0
