--- a/TODO
+++ b/TODO
@@ -89,3 +89,5 @@
 - clear window title on exit
 - might be nice if attach-session behaved like switch-client inside an
   existing client
+- tmux in tmux is funny with the status line on exit
+
