--- a/TODO
+++ b/TODO
@@ -90,4 +90,6 @@
 - might be nice if attach-session behaved like switch-client inside an
   existing client
 - tmux in tmux is funny with the status line on exit
+- the CSR emulation apparently works on everything apart from the FreeBSD
+  console where it is needed, install FreeBSD and fix it
 
