Redo mode keys slightly more cleanly and apply them to command prompt editing. vi or emacs mode is controlled by the session option status-keys.

--- a/TODO
+++ b/TODO
@@ -99,3 +99,4 @@
   for stuff like mode keys?
 - bug: copy mode gets the start of the selection wrong
 - ncmpc scroll up doesn't redraw properly
+- document status-keys
