- Ignore padding when writing so copying the screen for copy-mode doesn't include extra characters. - Handle combined characters properly when the previous character is not UTF-8.

--- a/TODO
+++ b/TODO
@@ -87,7 +87,7 @@
 (hopefully) for 0.8, in no particular order:
 - swap-pane-up, swap-pane-down (maybe move-pane-*)
 - test bug sshing from freebsd console
-- c&p is funny w/ UTF-8: a) skips over width=2 b) displays padding cells
+- c&p is funny w/ UTF-8: skips over width=2
 - fix compare fn for UTF-8
 
 - document repeat behaviour and -r on bind-key
