Document panes stuff.

--- a/TODO
+++ b/TODO
@@ -99,5 +99,5 @@
 - rotate-window has redraw bugs... :-/
 
 (hopefully) for 0.8, in no particular order:
-- document new layout stuff: section on layouts etc; document next-layout
-- document swap-pane and rotate-window
+- nothing!
+
